--- a/build.gradle
+++ b/build.gradle
@@ -23,4 +23,7 @@ dependencies {
     compile 'com.thedeanda:lorem:2.1'
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.j2html:j2html:1.0.0'
+    // https://mvnrepository.com/artifact/org.webjars/intercooler-js
+    compile group: 'org.webjars', name: 'intercooler-js', version: '1.2.1'
+
 }
